template/modules/styles-desktop/assets/global.less
html {
  font-family: -apple-system, 'PingFang SC', 'Microsoft YaHei', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 14px;
  line-height: @--line-height-default;
  box-sizing: border-box;
  color: @--color-text-regular;
  background-color: @--background-color-white;
}

h1 {
  font-size: @--font-size-heading1;
}

h2 {
  font-size: @--font-size-heading2;
}

h3 {
  font-size: @--font-size-heading3;
}

h4 {
  font-size: @--font-size-heading4;
}

h5 {
  font-size: @--font-size-heading5;
}

h6 {
  font-size: @--font-size-heading6;
}

*,
*::before,
*::after {
  margin: 0;
  box-sizing: inherit;
}

a {
  color: @--color-primary;
  background-color: transparent;
  text-decoration: none;
  outline: none;
  cursor: pointer;

  &:hover {
    color: @--color-primary-hover;
  }
}

.tooltip-label .el-tooltip {
  float: right;
  transform: translateY(10px);
}

.data-table-footer {
  margin-top: 24px;
  text-align: right;
}

.el-footer {
  line-height: @--footer-height;
}

